violating_resources/pod-security-policy/seccomp/samples/psp-seccomp/disallowed_ephemeral.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-seccomp-disallowed
  name: psp-seccomp-disallowed-ephemeral
  annotations:
    container.seccomp.security.alpha.kubernetes.io/nginx: unconfined
  labels:
    app: nginx-seccomp
spec:
  ephemeralContainers:
  - name: nginx
    image: nginx
