violating_resources/pod-security-policy/seccomp/samples/psp-seccomp/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-seccomp-allowed
  name: nginx-seccomp-allowed
  annotations:
    container.seccomp.security.alpha.kubernetes.io/nginx: runtime/default
  labels:
    app: nginx-seccomp
spec:
  containers:
  - name: nginx
    image: nginx
