violating_resources/pod-security-policy/seccomp/samples/psp-seccomp/example_allowed2.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-seccomp-allowed2
  name: nginx-seccomp-allowed2
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  labels:
    app: nginx-seccomp
spec:
  containers:
  - name: nginx
    image: nginx
