violating_resources/pod-security-policy/seccomp/samples/psp-seccomp/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-seccomp-disallowed
  name: psp-seccomp-example-disallowed
  annotations:
    container.seccomp.security.alpha.kubernetes.io/nginx: unconfined
  labels:
    app: nginx-seccomp
spec:
  containers:
  - name: nginx
    image: nginx
