violating_resources/pod-security-policy/seccomp/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata: # kpt-merge: /seccomp
  name: seccomp
tests:
- name: default-seccomp-required
  template: template.yaml
  constraint: samples/psp-seccomp/constraint.yaml
  cases:
  - name: example-disallowed-global
    object: samples/psp-seccomp/example_disallowed2.yaml
    assertions:
    - violations: 1
      message: "Seccomp profile 'unconfined' is not allowed for container 'nginx'. Found at: annotation seccomp.security.alpha.kubernetes.io/pod"
  - name: example-disallowed-container
    object: samples/psp-seccomp/example_disallowed.yaml
    assertions:
    - violations: 1
      message: "Seccomp profile 'unconfined' is not allowed for container 'nginx'. Found at: annotation container.seccomp.security.alpha.kubernetes.io/nginx"
  - name: example-allowed-container
    object: samples/psp-seccomp/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-allowed-global
    object: samples/psp-seccomp/example_allowed2.yaml
    assertions:
    - violations: no
  - name: disallowed-ephemeral
    object: samples/psp-seccomp/disallowed_ephemeral.yaml
    assertions:
    - violations: 1
      message: "Seccomp profile 'unconfined' is not allowed for container 'nginx'. Found at: annotation container.seccomp.security.alpha.kubernetes.io/nginx"
